--- a/src/app/reporte-citas/reporte-citas.component.css
+++ b/src/app/reporte-citas/reporte-citas.component.css
@@ -11,11 +11,12 @@
   }
   
   table {
-    width: 100%;
+    width: 80%;
     border: 2px solid rgba(35, 32, 32, 1);
-    text-align: left;
+    text-align: center;
     border-collapse: collapse;
     margin-top: 3%;
+    margin: auto;
     box-shadow: 15px 15px 20px -3px rgba(0,0,0,0.75);;
   }
   
