--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,9 +7,8 @@
         <ul>
             <li><a [routerLink]="['principal']">Inicio</a></li>
             <li><a [routerLink]="['reporte']">Agenda</a></li>
-            <li><a href="">Registrar</a></li>
+            <li><a [routerLink]="['acercade']">Acerca de</a></li>
             <li><a href="">Portafolio</a></li>
-            <li><a href="">Contact</a></li>
         </ul>
     </nav>
     <button><a [routerLink]="['menucita']">Solicita Cita</a></button>
