--- a/src/app/enlace/enlace.component.html
+++ b/src/app/enlace/enlace.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="mostrarMedico == 'true'; else mostrarRegistro">
-    <app-cita-medico></app-cita-medico>
+    <app-cita-medico (mostrarMedico)="recibir($event)"></app-cita-medico>
 </ng-container>
 
 <ng-template #mostrarRegistro>
-    <app-registro-citas></app-registro-citas>
+    <app-registro-citas [medico]=mostrarMedico></app-registro-citas>
 </ng-template>
