Cita medico full

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-3 col-sm-6">
                 <div class="single-box">
-                    <img src="../../assets/img/navbar/simi.png" alt="">
+                    <img src="../../assets/img/navbar/simi.png" alt="" style="height: 200px;">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo delectus, blanditiis vel a quis labore sequi ipsum inventore aut explicabo harum. Quae deserunt eligendi omnis vel itaque autem, adipisci veritatis?</p>
                     <h3>We Accept</h3>
                     <div class="card-area">
