--- a/src/app/portafolio/portafolio.component.css
+++ b/src/app/portafolio/portafolio.component.css
@@ -2,7 +2,7 @@ body {
     background-color: #000;
     font: 1.1em Arial, Helvetica, sans-serif;
   }
-  
+
   img {
     max-width: 100%;
     display: block;
@@ -12,6 +12,8 @@ body {
     margin: 0;
     display: grid;
     grid-template-rows: 1fr auto;
+    margin-bottom: 10px;
+    break-inside: avoid;
   }
   
   figure > img {
@@ -33,12 +35,41 @@ body {
   }
   
   .container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-flow: dense;
-    gap: 10px;
+    column-count: 3;
+    column-gap: 10px;
   }
-  
-  .landscape {
-    grid-column-end: span 2;
+  .card {
+    position: relative;
+    display: inline-block;
+  }
+
+  .card img {
+    width: 100%;
+    height: auto;
+  }
+
+  .card .text-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    opacity: 0;
+    transition: opacity 0.3s ease; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card:hover .text-overlay {
+    opacity: 1;
+  }
+
+  .card .text-overlay p {
+    color: #fff; 
+    font-size: 18px;
+    text-align: center;
+    margin: 0;
+    padding: 20px;
   }
