--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,15 +1,40 @@
-<footer>
-    <div class="container">
+<footer class="bg-dark text-white">
+    <div class="container py-5">
         <div class="row">
-            <div class="col-lg-3 col-sm-6">
-                <div class="single-box">
-                    <img src="../../assets/img/navbar/simi.png" alt="" style="height: 200px;">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo delectus, blanditiis vel a quis labore sequi ipsum inventore aut explicabo harum. Quae deserunt eligendi omnis vel itaque autem, adipisci veritatis?</p>
-                    <h3>We Accept</h3>
-                    <div class="card-area">
-                        <i class="fa fa-cc-visa"></i>
-                    </div>
-                </div>
+            <div class="col-md-4 col-lg-3 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Acerca de nosotros</h5>
+                <p class="text-muted">Somos una farmacia con servicio de antencion medica por medio de citas programas.
+                    contamos con multiples especialsitas y servicion medico para anteder tus malestares y necesidades de
+                    la salud</p>
+                <ul class="list-inline mt-4">
+                    <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-facebook"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-twitter"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-4 col-lg-3 mb-4 mb-md-0">
+                <h5 class="text-uppercase mb-4">Contactanos</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-3"><i class="fas fa-map-marker-alt me-2"></i>123 Main St. New York, NY 10001</li>
+                    <li class="mb-3"><i class="fas fa-envelope me-2"></i><a href="mailto:info@example.com"
+                            class="text-white">famrmaciasParecidas@gmail.com</a></li>
+                    <li class="mb-3"><i class="fas fa-phone me-2"></i><a href="tel:+1-123-456-7890"
+                            class="text-white">+1 (123) 456-7890</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4 col-lg-3 mb-4 mb-md-0">
+                <h5 class="text-uppercase mb-4">links rapidos</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-3"><a [routerLink]="['principal']" class="text-white">Home</a></li>
+                    <li class="mb-3"><a [routerLink]="['reporte']" class="text-white">Agenda</a></li>
+                    <li class="mb-3"><a [routerLink]="['acercade']" class="text-white">Acerca de nosotros</a></li>
+                    <li class="mb-3"><a [routerLink]="['portafolio']" class="text-white">portafolio</a></li>
+                </ul>
+            </div>
+            <div class="col-md-12 col-lg-3">
+                <img src="../../assets/img/footer/simi.png" alt="">
+
             </div>
         </div>
     </div>
