--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-4 col-lg-3 mb-4 mb-md-0">
                 <h5 class="text-uppercase">Acerca de nosotros</h5>
                 <p class="text-muted">Somos una farmacia con servicio de antencion medica por medio de citas programas.
-                    contamos con multiples especialsitas y servicion medico para anteder tus malestares y necesidades de
+                    contamos con multiples especialistas y servicios medico para anteder tus malestares y necesidades de
                     la salud</p>
                 <ul class="list-inline mt-4">
                     <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-facebook"></i></a></li>
