Pagina Principal y cambio de rutas en img

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,7 +33,7 @@
                 </ul>
             </div>
             <div class="col-md-12 col-lg-3">
-                <img src="../../assets/img/footer/simi.png" alt="">
+                <img src="assets/img/footer/simi.png" alt="">
 
             </div>
         </div>
