--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <img src="../../assets/img/navbar/simi.png" alt="">
+        <img src="assets/img/navbar/simi.png" alt="">
         <p>Farmacias Parecidas</p>
     </div>
     <nav>
