--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,1 +1,64 @@
-<p>principal works!</p>
+<div class="banner">
+    <div class="banner-img-container">
+      <img src="assets/img/fondo_banner.jpg" alt="Imagen de fondo del banner">
+    </div>
+    <h1>Bienvenido a Farmacias Pareciadas</h1>
+    <p>Parecido pero de un precio inferior</p>
+</div>
+<div class="recomendacion">
+<mat-grid-list cols="3" rowHeight="250px">
+    <mat-grid-tile>
+      <img src="assets/img/uno.png">
+      <mat-grid-tile-footer>
+        <h3>Precios más bajos</h3>
+      </mat-grid-tile-footer>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="assets/img/dos.png">
+      <mat-grid-tile-footer>
+        <h3>Los mejores doctores</h3>
+      </mat-grid-tile-footer>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="assets/img/tres.jpeg">
+      <mat-grid-tile-footer>
+        <h3>Amor a los gatos</h3>
+      </mat-grid-tile-footer>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
+
+<section class="appointment-section">
+    <div class="appointment-container">
+      <h2>Agenda una cita en nuestra farmacia</h2>
+      <p>Para agendar una cita en nuestra farmacia, sigue los siguientes pasos:</p><br>
+      <ol>
+        <li><span>1</span> Ingresa a nuestra página web y selecciona la opción de "Solicita cita".</li><br><br>
+        <li><span>2</span> Llena tus datos personales en el formulario.</li><br><br>
+        <li><span>3</span> Selecciona la fecha y la hora que más te convenga para tu cita.</li><br><br>
+        <li><span>4</span> ¡Listo! Te esperamos en nuestra farmacia el día y hora que señalaste.</li>
+      </ol>
+    </div>
+  </section>
+<div class="encuesta">
+
+
+  <mat-card>
+    <mat-card-title>Encuesta de satisfacción</mat-card-title>
+    <mat-card-content>
+      <p>¿Qué tan satisfecho está con nuestro servicio?</p>
+      <mat-radio-group [(ngModel)]="selectedOption">
+        <mat-radio-button value="1">Muy satisfecho</mat-radio-button>
+        <mat-radio-button value="2">Satisfecho</mat-radio-button>
+        <mat-radio-button value="3">Poco satisfecho</mat-radio-button>
+      </mat-radio-group>
+      <mat-form-field>
+        <textarea matInput placeholder="¿Por qué?" [(ngModel)]="feedback"></textarea>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="submit()">Enviar</button>
+    </mat-card-actions>
+  </mat-card>
+
+</div>
