--- a/src/app/portafolio/portafolio.component.css
+++ b/src/app/portafolio/portafolio.component.css
@@ -1,6 +1,7 @@
 body {
-    background-color: #000;
+  background: linear-gradient(to bottom, #ffffff, #58aced);
     font: 1.1em Arial, Helvetica, sans-serif;
+    
   }
 
   img {
@@ -37,6 +38,7 @@ body {
   .container {
     column-count: 3;
     column-gap: 10px;
+    margin-top: 30px;
   }
   .card {
     position: relative;
