Acerca de, Rutas e Imagenes

--- a/src/app/acercade/acercade.component.css
+++ b/src/app/acercade/acercade.component.css
@@ -1,5 +1,5 @@
 #quees{
-    background-image: url(../assets/imagenes/medico.jpg);
+    background-image: url(/assets/imagenes/medico.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
