--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -15,7 +15,7 @@
       <!-- BARAA CON ICONOS  -->
       <div id="tarCirculares">
         <div id="tarAvatar">
-          <img src="../assets/imagenes/llamada.png" alt="Llamada emergencia" class="avatar">
+          <img src="assets/imagenes/llamada.png" alt="Llamada emergencia" class="avatar">
           <h1 id="txtAnimacion1"><b>Emergencia</b></h1>
           <p style="color: #011f6f">
             Trasladamos a los pacientes desde el lugar donde se produce la situación
@@ -23,7 +23,7 @@
         </div>
 
         <div id="tarAvatar">
-          <img src="../assets/imagenes/estetoscopio.png" alt="Llamada emergencia" class="avatar">
+          <img src="assets/imagenes/estetoscopio.png" alt="Llamada emergencia" class="avatar">
           <h1 id="txtAnimacion1"><b>El mejor trato</b></h1>
           <p style="color: #011f6f">
             Creamos un ambiente cómodo y seguro para brindarte una mejor atención
@@ -31,14 +31,14 @@
         </div>
 
         <div id="tarAvatar">
-          <img src="../assets/imagenes/doctor.png" alt="Llamada emergencia" class="avatar">
+          <img src="assets/imagenes/doctor.png" alt="Llamada emergencia" class="avatar">
           <h1 id="txtAnimacion1"><b>Personal médico</b></h1>
           <p style="color: #011f6f">
             Dispuestos a ayudarte de la manera más atenta
           </p>
         </div>
         <div id="tarAvatar">
-          <img src="../assets/imagenes/ambulancia.png" alt="Llamada emergencia" class="avatar">
+          <img src="assets/imagenes/ambulancia.png" alt="Llamada emergencia" class="avatar">
           <h1 id="txtAnimacion1"><b>Doctores calificados</b></h1>
           <p style="color: #011f6f">
             Responsables de las decisiones que afectan al cuidado del paciente
@@ -47,7 +47,7 @@
       </div>
 
       <div id="dos">
-        <img src="../assets/imagenes/corazon.png" style="width: 70px;" alt="">
+        <img src="assets/imagenes/corazon.png" style="width: 70px;" alt="">
         <p style="margin-left: 30px; margin-right: 30px;">EN NUESTRO HOSPITAL, <b>NOS ESFORZAMOS</b></p>
         <br>
         <p style="font-size: 20px;">por brindar un ambiente acogedor y seguro para nuestros pacientes, donde se
@@ -61,7 +61,7 @@
       <div id="tarjetas">
         <div class="card">
           <div class="face front">
-            <img src="../assets/imagenes/objetivo.jpg" alt="Objetivo">
+            <img src="assets/imagenes/objetivo.jpg" alt="Objetivo">
             <h3>Objetivo</h3>
           </div>
           <div class="face back">
