--- a/src/app/cita-medico/cita-medico.component.html
+++ b/src/app/cita-medico/cita-medico.component.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="card my-card" (mouseenter)="onHover(true)" (mouseleave)="onHover(false)">
-          <img src="../../assets/Media/doctor.webp" class="card-img-top" alt="imagen de la tarjeta">
+          <img src="assets/Media/doctor.webp" class="card-img-top" alt="imagen de la tarjeta">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h5 class="card-title">Doctor</h5>
             <p class="card-text text-center">Agenda una cita con el doctor para checar tu malestar</p>
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-3">
         <div class="card my-card" (mouseenter)="onHover(true)" (mouseleave)="onHover(false)">
-          <img src="../../assets/Media/dentista.jpg" class="card-img-top" alt="imagen de la tarjeta">
+          <img src="assets/Media/dentista.jpg" class="card-img-top" alt="imagen de la tarjeta">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h5 class="card-title">Dentista</h5>
             <p class="card-text text-center">Agenda una cita con el dentista para checar tus dientes</p>
@@ -24,7 +24,7 @@
       </div>
       <div class="col-md-3">
         <div class="card my-card" (mouseenter)="onHover(true)" (mouseleave)="onHover(false)">
-          <img src="../../assets/Media/opto.jpg" class="card-img-top" alt="imagen de la tarjeta">
+          <img src="assets/Media/opto.jpg" class="card-img-top" alt="imagen de la tarjeta">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h5 class="card-title">Optometrista</h5>
             <p class="card-text text-center">Agenda una cita con el optometrista para checar tus ojos</p>
@@ -34,7 +34,7 @@
       </div>
       <div class="col-md-3">
         <div class="card my-card" (mouseenter)="onHover(true)" (mouseleave)="onHover(false)">
-          <img src="../../assets/Media/veteri.jpg" class="card-img-top" alt="imagen de la tarjeta">
+          <img src="assets/Media/veteri.jpg" class="card-img-top" alt="imagen de la tarjeta">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h5 class="card-title">Veterinario</h5>
             <p class="card-text text-center">Agenda una cita con el veterinario para checar a tu mascota</p>
