Inclusion del mapa

--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -1,219 +1,226 @@
 <body>
 
-  <!––Imagen con Texto, ¿QUIENES SOMOS?––>
-    <div id="quees">
+    <!––Imagen con Texto, ¿QUIENES SOMOS?––>
+        <div id="quees">
 
-      <div id="textoQueEs">
-        <!-- <p style="font-size: 40px; color: blue; font-weight: bold;">Farmacias Parecidas</p><br>-->
-        <p style="font-size: 25px;">Somos un centro médico de excelencia que se dedica a proporcionar atención médica
-          integral y de
-          alta calidad en diversas áreas de la salud.</p>
-      </div>
-    </div>
-
-    <!––Tarjetas circulares, ¿QUE OFRECEMOS?––>
-      <!-- BARAA CON ICONOS  -->
-      <div id="tarCirculares">
-        <div id="tarAvatar">
-          <img src="../assets/imagenes/llamada.png" alt="Llamada emergencia" class="avatar">
-          <h1 id="txtAnimacion1"><b>Emergencia</b></h1>
-          <p style="color: #011f6f">
-            Trasladamos a los pacientes desde el lugar donde se produce la situación
-          </p>
+            <div id="textoQueEs">
+                <!-- <p style="font-size: 40px; color: blue; font-weight: bold;">Farmacias Parecidas</p><br>-->
+                <p style="font-size: 25px;">Somos un centro médico de excelencia que se dedica a proporcionar atención
+                    médica
+                    integral y de
+                    alta calidad en diversas áreas de la salud.</p>
+            </div>
         </div>
 
-        <div id="tarAvatar">
-          <img src="../assets/imagenes/estetoscopio.png" alt="Llamada emergencia" class="avatar">
-          <h1 id="txtAnimacion1"><b>El mejor trato</b></h1>
-          <p style="color: #011f6f">
-            Creamos un ambiente cómodo y seguro para brindarte una mejor atención
-          </p>
-        </div>
-
-        <div id="tarAvatar">
-          <img src="../assets/imagenes/doctor.png" alt="Llamada emergencia" class="avatar">
-          <h1 id="txtAnimacion1"><b>Personal médico</b></h1>
-          <p style="color: #011f6f">
-            Dispuestos a ayudarte de la manera más atenta
-          </p>
-        </div>
-        <div id="tarAvatar">
-          <img src="../assets/imagenes/ambulancia.png" alt="Llamada emergencia" class="avatar">
-          <h1 id="txtAnimacion1"><b>Doctores calificados</b></h1>
-          <p style="color: #011f6f">
-            Responsables de las decisiones que afectan al cuidado del paciente
-          </p>
-        </div>
-      </div>
-
-      <div id="dos">
-        <img src="../assets/imagenes/corazon.png" style="width: 70px;" alt="">
-        <p style="margin-left: 30px; margin-right: 30px;">EN NUESTRO HOSPITAL, <b>NOS ESFORZAMOS</b></p>
-        <br>
-        <p style="font-size: 20px;">por brindar un ambiente acogedor y seguro para nuestros pacientes, donde se
-          sientan cómodos y confiados de que están recibiendo el mejor cuidado posible. Además, nos aseguramos de
-          utilizar
-          tecnología de última generación y técnicas innovadoras en todos nuestros tratamientos para garantizar la
-          eficacia
-          y seguridad de nuestros procedimientos.</p>
-      </div>
-
-      <div id="tarjetas">
-        <div class="card">
-          <div class="face front">
-            <img src="../assets/imagenes/objetivo.jpg" alt="Objetivo">
-            <h3>Objetivo</h3>
-          </div>
-          <div class="face back">
-            <h3>Objetivo</h3>
-            <p>Mejorar la calidad de vida de nuestros pacientes a través de la prevención, diagnóstico y
-              tratamiento de enfermedades. Nos esforzamos por ofrecer una atención médica personalizada y compasiva a
-              cada
-              uno de nuestros pacientes, y nos comprometemos a tratar a nuestros pacientes con dignidad, respeto y
-              profesionalismo
-              en todo momento.</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="face front">
-            <img src="../assets/imagenes/vision.jpg" alt="Vision">
-            <h3>Visión</h3>
-          </div>
-          <div class="face back">
-            <h3>Visión</h3>
-            <p>Convertirnos en un centro médico líder en el país, reconocido por nuestra
-              excelencia clínica, nuestros servicios de atención al paciente y nuestra capacidad de proporcionar
-              soluciones
-              de
-              atención médica innovadoras y eficaces.</p><br><br><br>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="face front">
-            <img src="../assets/imagenes/mision.jpg" alt="Mision">
-            <h3>Misión</h3>
-          </div>
-          <div class="face back">
-            <h3>Misión</h3>
-            <p>Proporcionar atención médica de alta calidad y accesible para todos, sin importar su origen
-              socioeconómico. Estamos comprometidos en mejorar la salud y el bienestar de la comunidad a la que
-              servimos, y
-              trabajamos en colaboración con otros profesionales de la salud para ofrecer soluciones de atención médica
-              integrales y efectivas.</p>
-          </div>
-        </div>
-      </div>
-      <br><br>
-      <h1 style="text-align: center;">NOSOTROS</h1>
-
-        <div class="container text-center" style="padding: 40px;">
-          <div class="row">
-            <div class="col">
-
-              <div class="card-alumno" style="margin-right: 200px;">
-                <div class="card_landing" style="--i:url(../assets/imagenes/fabian.jpeg)">
-                  <h6>Fabián</h6>
+        <!––Tarjetas circulares, ¿QUE OFRECEMOS?––>
+            <!-- BARAA CON ICONOS  -->
+            <div id="tarCirculares">
+                <div id="tarAvatar">
+                    <img src="../assets/imagenes/llamada.png" alt="Llamada emergencia" class="avatar">
+                    <h1 id="txtAnimacion1"><b>Emergencia</b></h1>
+                    <p style="color: #011f6f">
+                        Trasladamos a los pacientes desde el lugar donde se produce la situación
+                    </p>
                 </div>
-                <div class="card_info">
-                  <div class="head">
-                    <p class="title">Fabián</p>
-                    <div class="description">
+
+                <div id="tarAvatar">
+                    <img src="../assets/imagenes/estetoscopio.png" alt="Llamada emergencia" class="avatar">
+                    <h1 id="txtAnimacion1"><b>El mejor trato</b></h1>
+                    <p style="color: #011f6f">
+                        Creamos un ambiente cómodo y seguro para brindarte una mejor atención
+                    </p>
+                </div>
+
+                <div id="tarAvatar">
+                    <img src="../assets/imagenes/doctor.png" alt="Llamada emergencia" class="avatar">
+                    <h1 id="txtAnimacion1"><b>Personal médico</b></h1>
+                    <p style="color: #011f6f">
+                        Dispuestos a ayudarte de la manera más atenta
+                    </p>
+                </div>
+                <div id="tarAvatar">
+                    <img src="../assets/imagenes/ambulancia.png" alt="Llamada emergencia" class="avatar">
+                    <h1 id="txtAnimacion1"><b>Doctores calificados</b></h1>
+                    <p style="color: #011f6f">
+                        Responsables de las decisiones que afectan al cuidado del paciente
+                    </p>
+                </div>
+            </div>
+
+            <div id="dos">
+                <img src="../assets/imagenes/corazon.png" style="width: 70px;" alt="">
+                <p style="margin-left: 30px; margin-right: 30px;">EN NUESTRO HOSPITAL, <b>NOS ESFORZAMOS</b></p>
+                <br>
+                <p style="font-size: 20px;">por brindar un ambiente acogedor y seguro para nuestros pacientes, donde se
+                    sientan cómodos y confiados de que están recibiendo el mejor cuidado posible. Además, nos aseguramos
+                    de
+                    utilizar
+                    tecnología de última generación y técnicas innovadoras en todos nuestros tratamientos para
+                    garantizar la
+                    eficacia
+                    y seguridad de nuestros procedimientos.</p>
+            </div>
+
+            <div id="tarjetas">
+                <div class="card">
+                    <div class="face front">
+                        <img src="../assets/imagenes/objetivo.jpg" alt="Objetivo">
+                        <h3>Objetivo</h3>
                     </div>
-                  </div>
-
-
-                  <div class="content">
-                    <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios de
-                      transporte
-                      mas peligrosos que existen en México y le vale.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-
-              <div class="card-alumno" style="margin-right: 200px;">
-                <div class="card_landing" style="--i:url(../assets/imagenes/fabian.jpeg)">
-                  <h6>Fabián</h6>
-                </div>
-                <div class="card_info">
-                  <div class="head">
-                    <p class="title">Fabián</p>
-                    <div class="description">
+                    <div class="face back">
+                        <h3>Objetivo</h3>
+                        <p>Mejorar la calidad de vida de nuestros pacientes a través de la prevención, diagnóstico y
+                            tratamiento de enfermedades. Nos esforzamos por ofrecer una atención médica personalizada y
+                            compasiva a
+                            cada
+                            uno de nuestros pacientes, y nos comprometemos a tratar a nuestros pacientes con dignidad,
+                            respeto y
+                            profesionalismo
+                            en todo momento.</p>
                     </div>
-                  </div>
-
-
-                  <div class="content">
-                    <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios de
-                      transporte
-                      mas peligrosos que existen en México y le vale.</p>
-                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="col">
 
-              <div class="card-alumno">
-                <div class="card_landing" style="--i:url(../assets/imagenes/fabian.jpeg)">
-                  <h6>Fabián</h6>
-                </div>
-                <div class="card_info">
-                  <div class="head">
-                    <p class="title">Fabián</p>
-                    <div class="description">
+                <div class="card">
+                    <div class="face front">
+                        <img src="../assets/imagenes/vision.jpg" alt="Vision">
+                        <h3>Visión</h3>
                     </div>
-                  </div>
-
-
-                  <div class="content">
-                    <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios de
-                      transporte
-                      mas peligrosos que existen en México y le vale.</p>
-                  </div>
+                    <div class="face back">
+                        <h3>Visión</h3>
+                        <p>Convertirnos en un centro médico líder en el país, reconocido por nuestra
+                            excelencia clínica, nuestros servicios de atención al paciente y nuestra capacidad de
+                            proporcionar
+                            soluciones
+                            de
+                            atención médica innovadoras y eficaces.</p><br><br><br>
+                    </div>
                 </div>
-              </div>
+
+                <div class="card">
+                    <div class="face front">
+                        <img src="../assets/imagenes/mision.jpg" alt="Mision">
+                        <h3>Misión</h3>
+                    </div>
+                    <div class="face back">
+                        <h3>Misión</h3>
+                        <p>Proporcionar atención médica de alta calidad y accesible para todos, sin importar su origen
+                            socioeconómico. Estamos comprometidos en mejorar la salud y el bienestar de la comunidad a
+                            la que
+                            servimos, y
+                            trabajamos en colaboración con otros profesionales de la salud para ofrecer soluciones de
+                            atención médica
+                            integrales y efectivas.</p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
+            <br><br>
+            <h1 style="text-align: center;">NOSOTROS</h1>
 
-        <div class="card-alumno">
-          <div class="card_landing" style="--i:url(../assets/imagenes/rafa.jpeg)">
-            <h6>Fabián</h6>
-          </div>
-          <div class="card_info">
-            <div class="head">
-              <p class="title">Fabián</p>
-              <div class="description">
-              </div>
+            <div id="nosotros">
+                <div class="card-alumno" style="margin-right: 250px;margin-left: 200px;">
+                    <div class="card_landing" style="--i:url(../assets/imagenes/andrew.jpeg)">
+                        <h6>Andrew</h6>
+                    </div>
+                    <div class="card_info">
+                        <div class="head">
+                            <p class="title">Andrew</p>
+                            <div class="description">
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
+                                de
+                                transporte
+                                mas peligrosos que existen en México y le vale.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-alumno" style="margin-right: 250px;">
+                    <div class="card_landing" style="--i:url(../assets/imagenes/luis.png)">
+                        <h6>Luis Javier</h6>
+                    </div>
+                    <div class="card_info">
+                        <div class="head">
+                            <p class="title">Luis Javier</p>
+                            <div class="description">
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
+                                de
+                                transporte
+                                mas peligrosos que existen en México y le vale.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-alumno" style="margin-right: 250px;">
+                    <div class="card_landing" style="--i:url(../assets/imagenes/jacqueline.png)">
+                        <h6>Jacqueline</h6>
+                    </div>
+                    <div class="card_info">
+                        <div class="head">
+                            <p class="title">Jacqueline</p>
+                            <div class="description">
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
+                                de
+                                transporte
+                                mas peligrosos que existen en México y le vale.</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
+            <div id="nosotros">
+                <div class="card-alumno" style="margin-left: 20px;">
+                    <div class="card_landing" style="--i:url(../assets/imagenes/fabian.jpeg)">
+                        <h6>Fabián</h6>
+                    </div>
+                    <div class="card_info">
+                        <div class="head">
+                            <p class="title">Fabián</p>
+                            <div class="description">
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
+                                de
+                                transporte
+                                mas peligrosos que existen en México y le vale.</p>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="content">
-              <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios de transporte
-                mas peligrosos que existen en México y le vale.</p>
+                <div class="card-alumno" style="margin-left: 300px;">
+                    <div class="card_landing" style="--i:url(../assets/imagenes/rafa.jpeg)">
+                        <h6>Rafael</h6>
+                    </div>
+                    <div class="card_info">
+                        <div class="head">
+                            <p class="title">Rafael</p>
+                            <div class="description">
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
+                                de
+                                transporte
+                                mas peligrosos que existen en México y le vale.</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-          </div>
-        </div>
+            <br><br>
+            <h1 style="text-align: center;">UBÍCANOS</h1>
+            <br><br>
 
-        <div class="card-alumno">
-          <div class="card_landing" style="--i:url(../assets/imagenes/andrew.jpeg)">
-            <h6>Fabián</h6>
-          </div>
-          <div class="card_info">
-            <div class="head">
-              <p class="title">Fabián</p>
-              <div class="description">
-              </div>
-            </div>
+          
+                <div id="map"></div>
 
-
-            <div class="content">
-              <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios de transporte
-                mas peligrosos que existen en México y le vale.</p>
-            </div>
-          </div>
-        </div>
 </body>
