--- a/src/app/acercade/acercade.component.css
+++ b/src/app/acercade/acercade.component.css
@@ -1,3 +1,5 @@
+#map { height: 500px; }
+
 #quees{
     background-image: url(../assets/imagenes/medico.jpg);
     background-position: center;
@@ -154,16 +156,17 @@ p{
 
 #nosotros{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+text-align: center;
     background: white;
+    padding: 30px;
+    justify-content: center;
+    margin-right: 50px;
 }
 
 .card-alumno{
     position: relative;
     width: 300px;
-    height: 400px;
+    height: 300px;
 }
 
 .card-alumno .card_landing {
@@ -207,13 +210,13 @@ p{
 
 .card_info .head {
     padding: 5px 0;
-    border-bottom: solid 1px #bc8811;
+    border-bottom: solid 1px blue;
 }
 
 .card_info .head .title {
     font-size: 20px;
     font-weight: 700;
-    color: #bc8811;
+    color: blue;
 }
 
 .card_info .head .description {
@@ -227,11 +230,6 @@ p{
     align-items: center;
 }
 
-.card_info .head .description .item i {
-    color: #bc8811;
-    font-size: 15px;
-}
-
 .card_info .head .description .item p {
     font-size: 13px;
 }
@@ -240,22 +238,11 @@ p{
     margin-top: 15px;
 }
 
-.card_info .content .list {
-    padding: 10px 15px;
+#contenedorMapa{
+    display: flex;
 }
 
-.card_info .content .list li {
-    font-size: 14px;
-    margin-bottom: 5px;
+#info{
+    background-color: blue;
 }
 
-.card_info .action .btn {
-    padding: 10px;
-    color: #fff;
-    width: 100%;
-    text-decoration: none;
-    text-align: center;
-    background: #bc8811;
-    display: block;
-    margin-top: 10px;
-}
