--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import url("https://unpkg.com/leaflet@1.9.3/dist/leaflet.css");
+
 *{
     margin: 0;
     padding: 0;
