Binding en una direccion

--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -119,57 +119,48 @@
             <div id="nosotros">
                 <div class="card-alumno" style="margin-right: 250px;margin-left: 200px;">
                     <div class="card_landing" style="--i:url(../assets/imagenes/andrew.jpeg)">
-                        <h6>Andrew</h6>
+                        <h6>{{andrew.nombre}}</h6>
                     </div>
                     <div class="card_info">
                         <div class="head">
-                            <p class="title">Andrew</p>
+                            <p class="title">{{andrew.nombre}}</p>
                             <div class="description">
                             </div>
                         </div>
                         <div class="content">
-                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
-                                de
-                                transporte
-                                mas peligrosos que existen en México y le vale.</p>
+                            <p>{{andrew.descripcion}}</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="card-alumno" style="margin-right: 250px;">
                     <div class="card_landing" style="--i:url(../assets/imagenes/luis.png)">
-                        <h6>Luis Javier</h6>
+                        <h6>{{luis.nombre}}</h6>
                     </div>
                     <div class="card_info">
                         <div class="head">
-                            <p class="title">Luis Javier</p>
+                            <p class="title">{{luis.nombre}}</p>
                             <div class="description">
                             </div>
                         </div>
                         <div class="content">
-                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
-                                de
-                                transporte
-                                mas peligrosos que existen en México y le vale.</p>
+                            <p>{{luis.descripcion}}</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="card-alumno" style="margin-right: 250px;">
                     <div class="card_landing" style="--i:url(../assets/imagenes/jacqueline.png)">
-                        <h6>Jacqueline</h6>
+                        <h6>{{jacqueline.nombre}}</h6>
                     </div>
                     <div class="card_info">
                         <div class="head">
-                            <p class="title">Jacqueline</p>
+                            <p class="title">{{jacqueline.nombre}}</p>
                             <div class="description">
                             </div>
                         </div>
                         <div class="content">
-                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
-                                de
-                                transporte
-                                mas peligrosos que existen en México y le vale.</p>
+                            <p>{{jacqueline.descripcion}}</p>
                         </div>
                     </div>
                 </div>
@@ -179,38 +170,32 @@
             <div id="nosotros">
                 <div class="card-alumno" style="margin-left: 20px;">
                     <div class="card_landing" style="--i:url(../assets/imagenes/fabian.jpeg)">
-                        <h6>Fabián</h6>
+                        <h6>{{fabian.nombre}}</h6>
                     </div>
                     <div class="card_info">
                         <div class="head">
-                            <p class="title">Fabián</p>
+                            <p class="title">{{fabian.nombre}}</p>
                             <div class="description">
                             </div>
                         </div>
                         <div class="content">
-                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
-                                de
-                                transporte
-                                mas peligrosos que existen en México y le vale.</p>
+                            <p>{{fabian.descripcion}}</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="card-alumno" style="margin-left: 300px;">
                     <div class="card_landing" style="--i:url(../assets/imagenes/rafa.jpeg)">
-                        <h6>Rafael</h6>
+                        <h6>{{rafael.nombre}}</h6>
                     </div>
                     <div class="card_info">
                         <div class="head">
-                            <p class="title">Rafael</p>
+                            <p class="title">{{rafael.nombre}}</p>
                             <div class="description">
                             </div>
                         </div>
                         <div class="content">
-                            <p>Inteligente, es como un murciélago, le gusta trabajar de noche, maneja uno de los medios
-                                de
-                                transporte
-                                mas peligrosos que existen en México y le vale.</p>
+                            <p>{{rafael.descripcion}}</p>
                         </div>
                     </div>
                 </div>
